--- a/documentation/modules/configuring/con-config-kafka-connect-multiple-instances.adoc
+++ b/documentation/modules/configuring/con-config-kafka-connect-multiple-instances.adoc
@@ -28,5 +28,7 @@ spec:
 <3> Kafka topic that stores connector offsets.
 <4> Kafka topic that stores connector and task status updates.
 
+NOTE: All workers that belong to the same Kafka Connect cluster must use the same values for these properties.
+
 Unless you use different settings for each instance, all instances form a cluster and use the same internal topics.
 Multiple instances attempting to use the same internal topics will cause unexpected errors, so you must change the values of these properties for each instance.
